[package]
name = "reaper-eth-engine-database"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-database"
readme = "./README.md"

[dependencies]
reaper-eth-engine-types.workspace = true
reaper-eth-engine-pricing.workspace = true
reaper-eth-engine-metrics.workspace = true
reaper-eth-engine-macros.workspace = true
reaper-eth-engine-libmdbx = { workspace = true, features = [
    "read-tx-timeouts",
] }
reaper-eth-engine-reth-tracing.workspace = true

moka = { version = "0.12.8", features = ["sync"] }
regex.workspace = true

# alloy
alloy-primitives = { workspace = true, features = [
    "rand",
    "rlp",
    "arbitrary",
    "serde",
] }
alloy-rlp = { workspace = true, features = ["arrayvec"] }
alloy-json-abi = { workspace = true, features = ["serde_json"] }

# reth
reth-primitives.workspace = true
reth-interfaces.workspace = true
reth-libmdbx = { workspace = true, features = [
    "return-borrowed",
    "read-tx-timeouts",
] }
reth-mdbx-sys = { git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b" }
reth-db.workspace = true
reth-rpc.workspace = true
reth-rpc-types.workspace = true

# filesystem
fs2.workspace = true
fs_extra.workspace = true
filesize.workspace = true
tar.workspace = true
flate2.workspace = true

# libmdbx deps
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
reth-codecs.workspace = true
reth-codecs-derive.workspace = true
proptest = "1.4"
proptest-derive = "0.4"
arbitrary = "1.3"
rand = "0.8.5"
modular-bitfield = "0.11.2"
bytes = "1.5"
zstd = "0.13.2"
chrono = "0.4.38"
dashmap.workspace = true
polars.workspace = true
arrow.workspace = true
parquet = { workspace = true, features = ["async"] }

ahash = "0.8.11"
# numbers
malachite = { workspace = true, features = ["naturals_and_integers"] }

# sorella-db
db-interfaces = { git = "https://github.com/SorellaLabs/db-interfaces", optional = true, features = [
    "test-utils",
] }
clickhouse = { workspace = true, features = ["tls"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
serde_repr.workspace = true
serde_with = { workspace = true, features = ["macros"] }

# error handling
thiserror.workspace = true

# async
futures.workspace = true
tokio.workspace = true
tokio-scoped = "0.2.0"

# web
hyper-tls.workspace = true
hyper.workspace = true

# tracing
tracing.workspace = true

# misc
backon.workspace = true
eyre.workspace = true
parking_lot.workspace = true
dotenvy.workspace = true
bincode = "2.0.0-rc.3"
redefined.workspace = true
derive_more = "0.99.18"
paste = "1.0.14"
petgraph = "0.6.5"
itertools = "0.12.1"
rayon.workspace = true
strum = "0.25"
strum_macros = "0.25.3"
async-trait = "0.1.83"
reqwest = { workspace = true, features = ["stream"] }
toml = "0.8.19"
indicatif.workspace = true
page_size = "0.6.0"
schnellru = "0.2.3"

# benches
criterion = "0.5.1"
human_bytes = "0.4.3"
rkyv.workspace = true
auto_impl.workspace = true

reth-tasks = { workspace = true }

[dev-dependencies]
# reaper-eth-engine-core = { path = "../eth-engine-core", features = ["tests"] }
# reaper-eth-engine-classifier = { path = "../eth-engine-classifier", features = [
#     "tests",
# ] }
# reaper-eth-engine-database = { path = "../eth-engine-database", features = [
#     "tests",
# ] }
reaper-eth-engine-types.workspace = true
reaper-eth-engine-pricing.workspace = true
reaper-eth-engine-macros.workspace = true
serial_test.workspace = true
test-fuzz = "4"
async-trait.workspace = true
reth-tasks.workspace = true
criterion = "0.5.1"

[build-dependencies]
reaper-eth-engine-types.workspace = true
serde.workspace = true
toml = "0.8.19"
alloy-primitives.workspace = true

[[bench]]
name = "cex_downloader_benchmarks"
harness = false
required-features = ["sorella-server"]

[[bench]]
name = "cex_quotes_conversion"
harness = false
required-features = ["sorella-server"]

[[test]]
name = "quotes_converter"
path = "tests/quotes_converter.rs"
required-features = ["sorella-server"]

[[test]]
name = "db_query"
path = "tests/db_query.rs"
required-features = ["sorella-server"]

[features]
sorella-server = ["local-reth", "local-clickhouse"]
tests = [
    # "reaper-eth-engine-pricing/tests"
]
local-reth = [
    # "reaper-eth-engine-core/local-reth",
    # "reaper-eth-engine-reth-tracing/local-reth",
    # "reaper-eth-engine-types/local-reth",
]
local-clickhouse = [
    "db-interfaces",
    # "reaper-eth-engine-core/local-clickhouse",
    # "reaper-eth-engine-database/local-clickhouse",
]

[lib]
name = "reaper_eth_engine_database"
path = "src/lib.rs"
