[package]
name = "reaper-eth-inspect"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.0.1"
publish = true
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-inspect"
readme = "./README.md"

[[bench]]
name = "inspectors"
harness = false

[dependencies]
reaper-eth-engine-types = { path = "../eth-engine-types" }
reaper-eth-engine-database = { path = "../eth-engine-database" }
reaper-eth-engine-metrics = { path = "../eth-engine-metrics" }
reaper-eth-engine-core = { path = "../eth-engine-core", optional = true }
reaper-eth-engine-classifier = { path = "../eth-engine-classifier", optional = true }
reaper-eth-engine-pricing = { path = "../eth-engine-pricing", optional = true }

# database
clickhouse.workspace = true

# web
hyper-tls.workspace = true
hyper.workspace = true

# alloy
alloy-sol-macro.workspace = true
alloy-sol-types.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-rpc-types.workspace = true

reqwest.workspace = true
# async
async-trait.workspace = true
rayon.workspace = true
futures.workspace = true
tokio.workspace = true
async-scoped = { version = "0.7.1", features = ["use-tokio"] }

# reth
reth-primitives.workspace = true
reth-rpc-types.workspace = true

# tracing
tracing.workspace = true

# error handling
thiserror.workspace = true


# serde
serde_with = { workspace = true, features = ["macros"] }
serde.workspace = true
serde_json.workspace = true

# numbers
malachite.workspace = true

# misc
strum = { workspace = true, features = ["derive"] }
lazy_static.workspace = true
auto_impl.workspace = true
itertools.workspace = true
eyre.workspace = true
colored.workspace = true

criterion = { version = "0.5", features = [
    "async",
    "async_tokio",
], optional = true }

[dev-dependencies]
dotenvy.workspace = true
serial_test.workspace = true
reaper-eth-engine-classifier = { path = "../eth-engine-classifier" }
reaper-eth-engine-core = { path = "../eth-engine-core" }
reaper-eth-engine-inspect = { path = "../eth-engine-inspect" }
reaper-eth-engine-pricing = { path = "../eth-engine-pricing" }
reaper-eth-engine-macros = { path = "../eth-engine-macros" }
tracing-subscriber.workspace = true
reth-db.workspace = true
reaper-eth-engine-types = { path = "../eth-engine-types" }
reaper-eth-engine-database = { path = "../eth-engine-database" }
tokio.workspace = true
reaper-reth-tracing = { path = "../reaper-reth-tracing" }
criterion = { version = "0.5" }
rand = "0.8.5"
statrs = "0.16"

[features]
sorella-server = ["local-reth", "local-clickhouse"]

tests = [
    "reaper-eth-engine-classifier/tests",
    "reaper-eth-engine-core/tests",
    "reaper-eth-engine-pricing/tests",
    "criterion",
]

local-reth = [
    "reaper-eth-engine-core/local-reth",
    "reth-tracing-ext/local-reth",
    "reaper-eth-engine-types/local-reth",
]

local-clickhouse = [
    "reaper-eth-engine-database/local-clickhouse",
    "reaper-eth-engine-core/local-clickhouse",
]

[lib]
name = "reaper_eth_engine_inspect"
path = "src/lib.rs"
