[package]
name = "reaper-eth-engine-libmdbx"
description = "Idiomatic and safe MDBX wrapper with good licence"
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-libmdbx"
readme = "./README.md"

[dependencies]
bitflags.workspace = true
byteorder = "1"
derive_more.workspace = true
indexmap = "2"
libc = "0.2"
parking_lot.workspace = true
thiserror.workspace = true
dashmap = { workspace = true, features = ["inline"], optional = true }
tracing.workspace = true
ffi = { package = "reth-mdbx-sys", git = "https://github.com/paradigmxyz/reth", rev = "ac29b4b" }

[dev-dependencies]
tempfile = "3.8"
criterion = "0.5"
pprof = "0.13"

[target.'cfg(not(windows))'.dependencies]
libffi = "3.2.0"

[features]
default = []
return-borrowed = []
read-tx-timeouts = ["dashmap", "dashmap/inline"]

[lib]
name = "reaper_eth_engine_libmdbx"
path = "src/lib.rs"
