[package]
name = "reaper-eth-engine-metrics"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-metrics"
readme = "./README.md"

[dependencies]
reaper-eth-engine-types.workspace = true

# async
tokio = { workspace = true, features = ["full", "tracing"] }
futures.workspace = true

# tracing
tracing.workspace = true
tracing-subscriber.workspace = true
reth-metrics.workspace = true
alloy-primitives.workspace = true
reth-primitives.workspace = true
colored.workspace = true
reth-interfaces.workspace = true

# metrics
metrics-exporter-prometheus.workspace = true
metrics-util.workspace = true
metrics-process.workspace = true
metrics.workspace = true
prometheus.workspace = true

db-interfaces = { git = "https://github.com/SorellaLabs/db-interfaces", features = [
    "test-utils",
] }

clickhouse = { workspace = true, features = ["tls"] }
# errors
eyre.workspace = true

# http/rpc
hyper.workspace = true
dashmap.workspace = true

[target.'cfg(unix)'.dependencies]
tikv-jemalloc-ctl = { version = "0.6.0", optional = true }

[target.'cfg(target_os = "linux")'.dependencies]
procfs = "0.17.0"

[features]
jemalloc = ["dep:tikv-jemalloc-ctl"]
tests = []

[lib]
name = "reaper_eth_engine_metrics"
path = "src/lib.rs"
