[package]
name = "reaper-eth-engine-pricing"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.1.0"
publish = false
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-pricing"
readme = "./README.md"

[[bench]]
name = "bench"
harness = false

[dependencies]
reaper-eth-engine-macros.workspace = true
reaper-eth-engine-types.workspace = true
reaper-eth-engine-metrics.workspace = true

itertools = "0.12.1"
redefined.workspace = true

futures.workspace = true
thiserror.workspace = true

# reth
reth-rpc-types.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-codecs.workspace = true

# tracing
tracing.workspace = true
# async
rayon.workspace = true
tokio = { workspace = true, features = ["full"] }

# numbers
malachite = { workspace = true, features = ["enable_serde"] }

# serde
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
erased-serde = "0.3.31"
serde_with.workspace = true
serde_repr.workspace = true
alloy-rlp = { workspace = true, features = ["arrayvec"] }

# pathfinding
pathfinding = "4.8.1"
rustc-hash = "1.1.0"
indexmap = "2.2.2"

# misc
phf.workspace = true
strum = { workspace = true, features = ["derive"] }
auto_impl.workspace = true
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-sol-types.workspace = true
alloy-sol-macro = { workspace = true, features = ["json"] }
alloy-dyn-abi.workspace = true
parking_lot.workspace = true
petgraph = "0.6.5"
derive_more.workspace = true
async-trait.workspace = true
num-bigfloat = "1.7.0"
parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
proptest = "1.4"
proptest-derive = "0.4"
arbitrary = "1.3"
rand = "0.8.5"
modular-bitfield = "0.11.2"
bytes = "1.5"
eyre.workspace = true
rkyv.workspace = true
dashmap.workspace = true
criterion = { version = "0.5.1", features = [
    "async",
    "async_tokio",
], optional = true }

[dev-dependencies]
# reaper-eth-engine-pricing-test-utils = { path = "./pricing-test-utils" }
# reaper-eth-engine-pricing = { path = "../eth-engine-pricing", features = [
#     "tests",
# ] }
# reaper-eth-engine-core = { path = "../eth-engine-core", features = ["tests"] }
# reaper-eth-engine-database = { path = "../eth-engine-database", features = [
#     "tests",
# ] }
# reaper-eth-engine-classifier = { path = "../eth-engine-classifier", features = [
#     "tests",
# ] }
# reaper-eth-engine-types = { path = "../eth-engine-types", features = ["tests"] }
# reaper-eth-engine-reth-tracing = { path = "../eth-engine-reth-tracing", features = [
#     "tests",
# ] }
dotenvy.workspace = true
tokio.workspace = true
reth-provider.workspace = true
rand = "0.8.5"
eyre.workspace = true

[features]
default = []
sorella-server = ["local-reth", "local-clickhouse"]
tests = ["criterion"]
uni-v3-ticks = []
local-reth = [
    # "reaper-eth-engine-reth-tracing/local-reth",
    # "reaper-eth-engine-pricing-test-utils/local-reth",
    # "reaper-eth-engine-types/local-reth",
    # "reaper-eth-engine-core/local-reth",
    # "reaper-eth-engine-classifier/local-reth",
    # "reaper-eth-engine-database/local-reth",
]
local-clickhouse = [
    # "reaper-eth-engine-pricing-test-utils/local-clickhouse",
    # "reaper-eth-engine-reth-tracing/local-clickhouse",
    # "reaper-eth-engine-core/local-clickhouse",
    # "reaper-eth-engine-classifier/local-clickhouse",
    # "reaper-eth-engine-database/local-clickhouse",
]

[lib]
name = "reaper_eth_engine_pricing"
path = "src/lib.rs"
