[package]
name = "reaper-eth-engine-relay-api"
description = "API specification for MEV-Boost PBS relays."
version = "0.1.0"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-relay-api"
readme = "./README.md"

[dependencies]
serde = "^1.0.208"
serde_derive = "^1.0.208"
serde_json = "^1.0.125"
url = "^2.5.2"
reqwest = { version = "0.12.7", features = ["json", "multipart"] }

[lib]
name = "reaper_eth_engine_relay_api"
path = "src/lib.rs"
