[package]
name = "reaper-eth-engine-relay-api"
description = "API specification for MEV-Boost PBS relays."
version = "0.0.1"
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-relay-api"
readme = "./README.md"

[dependencies]
serde.workspace = true
serde_derive.workspace = true
serde_json.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }

[lib]
name = "reaper_eth_engine_relay_api"
path = "src/lib.rs"
