[package]
name = "reaper-eth-engine-reth-tracing"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.0.1"
publish = true
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-reth-tracing"
readme = "./README.md"

[dependencies]
reaper-eth-engine-types.workspace = true

# Reth
reth-node-ethereum.workspace = true
async-trait.workspace = true
reth-tasks.workspace = true
reth-rpc.workspace = true
reth-rpc-types.workspace = true
reth-rpc-api.workspace = true
reth-provider.workspace = true
reth-transaction-pool.workspace = true
reth-network-api.workspace = true
reth-primitives.workspace = true
reth-db.workspace = true
reth-blockchain-tree.workspace = true
reth-beacon-consensus.workspace = true
reth-revm.workspace = true
reth-interfaces.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-rpc-types-trace = { git = "https://github.com/alloy-rs/alloy", rev = "39b8695" }
alloy-rpc-types = { workspace = true, features = ["jsonrpsee-types"] }
futures.workspace = true
tracing.workspace = true

num_cpus.workspace = true
revm-primitives.workspace = true
revm-inspectors.workspace = true
bitflags = "2.4"

revm.workspace = true

# error
eyre = "0.6.8"

serde.workspace = true
serde_json.workspace = true

# Async
tokio = { version = "1.28.2", features = ["full"] }

[dev-dependencies]
# reaper-eth-engine-core = { workspace = true, features = ["tests"] }

# reaper-eth-engine-macros.workspace = true
dotenvy.workspace = true

[features]
tests = []
local-reth = [
    # "brontes-types/local-reth",
    # "brontes-core/local-reth"
]
local-clickhouse = [
    # "brontes-core/local-clickhouse",
    # "brontes-types/local-clickhouse",
]

[lib]
name = "reaper_eth_engine_reth_tracing"
path = "src/lib.rs"
