[package]
name = "reaper-eth-engine-tracing"
description = "A core Etherium trading crate containing schema definitions and validation logic."
version = "0.0.1"
publish = true
edition = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
categories = { workspace = true }
keywords = { workspace = true }
homepage = { workspace = true }
documentation = "https://docs.rs/reaper-eth-engine-tracing"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
